<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView7"
        android:scaleType="fitXY"
        android:contentDescription="@string/none"
        android:background="@color/colorWhite"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <additional.CircledNetworkImageView
        card_view:srcCompat="@android:drawable/ic_menu_gallery"
        android:id="@+id/userImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:contentDescription="@string/none"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userImage"
        android:layout_marginTop="25dp"
        android:id="@+id/userNameLbl"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:ems="10"
        android:layout_below="@+id/userNameLbl"
        android:layout_alignParentStart="true"
        android:id="@+id/userNameTxt"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userEmailLbl"
        android:layout_below="@+id/userAgeTxt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:layout_below="@+id/userEmailLbl"
        android:layout_alignParentStart="true"
        android:id="@+id/userEmailTxt"
        android:layout_alignParentEnd="true" android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/userEmailTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/btnSubmit"
        android:background="@drawable/submit_btn"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userAgeLbl"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:layout_alignStart="@+id/userNameTxt"
        android:layout_alignBottom="@+id/userGender"
        android:layout_alignTop="@+id/userAgeTxt" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/userAgeTxt"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="10dp"
        android:layout_alignTop="@+id/userGender"
        android:layout_toEndOf="@+id/userAgeLbl"
        android:layout_alignBottom="@+id/userGender" />

    <Switch

        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/userGender"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textOff="@string/female"
        android:textOn="@string/male"
        android:showText="true"
        android:layout_below="@+id/userNameTxt"
        android:layout_alignEnd="@+id/userEmailLbl" />

</RelativeLayout>